[gd_scene load_steps=6 format=2]

[ext_resource path="res://toilet(clean).png" type="Texture" id=1]
[ext_resource path="res://RapidlyPressE.tscn" type="PackedScene" id=2]
[ext_resource path="res://toilet.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.2607
height = 96.2147

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.6931
height = 11.458

[node name="toilet" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 46.7531 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -41.0276 )
shape = SubResource( 2 )

[node name="RapidlyPressE" parent="." instance=ExtResource( 2 )]
position = Vector2( -189.547, -121.47 )

[node name="ProgressBar" parent="RapidlyPressE/Control" index="0"]
margin_left = 133.0
margin_top = 8.0
margin_right = 250.0
margin_bottom = 24.0
value = 0.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]

[editable path="RapidlyPressE"]
